2025-10-10 - v 0.10.2
=====================

* New default permissions to add/delete modalities through the Rest API
  https://discourse.orthanc-server.org/t/managing-modalities-using-the-rest-api-and-keycloak/6137
* New standard configuration "stl"


2025-08-13 - v 0.10.1
=====================

=> Recommended Orthanc version: 1.12.9 <=
=> Minimum Orthanc version: 1.11.3 <=
=> Recommended SDK version: 1.12.9 <=
=> Minimum SDK version: 1.11.3 <=

* Fix audit-logs export in CSV format.


2025-08-12 - v 0.10.0
=====================

=> Recommended Orthanc version: 1.12.9 <=
=> Minimum Orthanc version: 1.11.3 <=
=> Recommended SDK version: 1.12.9 <=
=> Minimum SDK version: 1.11.3 <=


* New configuration "ExtraPermissions" to ADD new permissions to
  the default "Permissions" entries.
* Improved handling of "Anonymous" user profiles (when no auth-tokens
  are provided):  The plugin will now request the auth-service to
  get an anonymous user profile even if there are no auth-tokens in the
  HTTP request.
* The User profile can now contain a "groups" field if the auth-service
  provides it.
* The User profile can now contain an "id" field if the auth-service
  provides it.
* New experimental feature: audit-logs
  - Enabled by the "EnableAuditLogs" configuration.
  - Audit-logs are currently handled by the PostgreSQL plugin and can be 
    browsed through the route /auth/audit-logs.
  - New default permission "audit-logs" to grant access to the 
    "/auth/audit-logs" route.
* Fix: The "server-id" field is now included in all requests sent to the
  auth-service.


2025-07-14 - v 0.9.4
====================

=> Minimum Orthanc version: 1.11.3 <=
=> Recommended SDK version: 1.12.4 <=
=> Minimum SDK version: 1.11.3 <=

* Fixed a security issue: the entries in the cache token->permissions were kept too long in the cache
  allowing users to have access to generic routes even with an expired token.
  These entries are now stored maximum for 10 seconds.