@@ -1,3 +1,10 @@
+Pending changes in the mainline
+===============================
+
+* New default permissions for worklists
+* New default permissions for tools/metrics-prometheus
+
+
 2025-10-10 - v 0.10.2
 =====================
 
